--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   <title>{{title}}</title>
 </head>
 <body>
-    <app-time-spent-view> </app-time-spent-view>
+    <app-todos></app-todos>
 </body>
 </html>
