--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -1,9 +1,13 @@
-.todo-list {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
 .complete{
   color: rgb(255, 8, 8);
   text-decoration: line-through;
+}
+
+*{
+  margin: 5px;
+}
+
+body{
+  max-width: 800px;
+  margin: auto;
 }
