--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -4,29 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>Todos</title>
 </head>
 <body>
-  <div>
+  <div class="form-group">
     <h5>TODO App:</h5>
     <form (submit)="add_todo()">
       <input 
+        class="form-control"
         id="content" 
         type="text" 
         name="inputTodo"
         placeholder="Enter todo..."
         [(ngModel)]="inputTodo"
       />
-      <button type="submit" value="Add Todo">submit</button>
+      <button type="submit" value="Add Todo" class="btn btn-primary">submit</button>
     </form>
   </div>
-  <ul class="todo-list" *ngFor="let todo of todo_list; let i = index;">
-      <li id="{{i}}">
-        <h4>{{i}}</h4>
-        <button (click)="toggleCompleted(i)">
-          <h4 class="{{todo.completed ? 'complete' : null}}">{{todo.content}}</h4>
-        </button>
-        <button (click)="delete_todo(i)">delete</button>
+  <ul class="list-group" *ngFor="let todo of todo_list; let i = index;">
+      <li id="{{i}}" class="row list-group-item">
+        <input #input class=" col-7 {{todo.completed ? 'complete' : null}}" [defaultValue]="todo.content" (keyup)="edit_todo(input.value, i)" >
+        <button (click)="toggleCompleted(i)" class="col-2 btn {{todo.completed ? 'btn-secondary' : 'btn-primary'}}">complete</button>
+        <button (click)="delete_todo(i)" class="col-2 btn btn-danger" *ngIf="todo.completed">delete</button>
+        
       </li>
   </ul>
 </body>
